# customer_segmentation

./: .dockerignore  .env.example  DEPLOYMENT.md  README.md  app.py  pyproject.toml  requirements-basic.txt  requirements-flexible.txt  requirements-minimal.txt  requirements.txt  setup.py  streamlit_app.py
data/output/: correlation_analysis.csv  segmentation_analysis_results.json  summary_report.txt
notebooks/: customer_segmentation_workflow.ipynb
src/: main.py
src/utils/: correlation_analyzer.py  summary_reporter.py
tests/: demo_enhanced_analytics.py  test_correlation_and_summary.py
